# llama-project

./: pyproject.toml
notebooks/: 1-hugging_face_open_source.ipynb  1.open_source_with_hugging_face.ipynb  2.getting_started_langchain.ipynb  3.1.qa_with_rag.ipynb  3.2.add_chat_history.ipynb  3.3.streaming.ipynb  3.qa_with_rag.ipynb  langchain_quickstart_with_llama2.ipynb
