[tool.poetry]
name = "llama-project"
version = "0.1.0"
description = ""
authors = ["Marlon Menendez <marlon.menendezg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
torch = "^2.2.2"
flake8 = "^7.0.0"
black = "^24.3.0"
mypy = "^1.9.0"
matplotlib = "^3.8.4"
pandas = "^2.2.1"
polars = "^0.20.18"
seaborn = "^0.13.2"
transformers = "^4.39.3"
datasets = "^2.18.0"
evaluate = "^0.4.1"
accelerate = "^0.28.0"
optuna = "^3.6.1"
langchain = "^0.1.14"
jupyterlab = "^4.1.5"
pylance = "^0.10.9"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"
einops = "^0.7.0"
unstructured = "^0.13.2"
markdown = "^3.6"
sentence-transformers = "^2.6.1"
chromadb = "^0.4.24"
langchain-experimental = "^0.0.57"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
